Trued up metadata as best we can.

--- a/notebooks/SFI-GeoAsset-ingest.ipynb
+++ b/notebooks/SFI-GeoAsset-ingest.ipynb
@@ -213,7 +213,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "89e16bbe-d602-4ad5-b9d7-a522536ca352",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -225,19 +227,54 @@
     "\n",
     "# Because NaN cannot be converted to int type, we cannot use int as a datatype for years that are NaN\n",
     "\n",
-    "cement_dict = pd.read_excel(cement_bytes, sheet_name=None, dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
-    "del(cement_bytes)"
+    "cement_df = pd.read_excel(cement_bytes, sheet_name='SFI_ALD_Cement_Database', dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35a61f06-65e5-4f50-a2e0-1dbd1301cae8",
+   "id": "68e81a7e-bb7b-4497-a829-271b2fa45516",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cement_dict['SFI_ALD_Cement_Database']\n",
-    "df[df.country_code.isna()]"
+    "df = pd.read_excel(cement_bytes, sheet_name='About', header=None)\n",
+    "cement_meta_content = {\n",
+    "    'title': df.iloc[0,0],\n",
+    "    'license': df.iloc[2,0],\n",
+    "    'description': df.iloc[4,0],\n",
+    "    'citation': df.iloc[6,0],\n",
+    "    'contact': df.iloc[8,0],\n",
+    "    'release_date': 'July 2021',\n",
+    "    # How should we describe our transformative step here?\n",
+    "}\n",
+    "df = df.iloc[:, [1, 2]].dropna(axis=0).T\n",
+    "df2 = pd.DataFrame(index=[0], columns=df.iloc[0])\n",
+    "df2.loc[0] = df.iloc[1].values\n",
+    "# df = df.dropna(axis=0).set_index(0).T\n",
+    "df = df2\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09cd4295-424c-4d73-833a-fe255f3235b1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cement_meta_fields = df.to_dict('records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4dac3fd-0376-4d5d-830f-def9a249b36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cement_meta_fields"
    ]
   },
   {
@@ -247,16 +284,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(cement_dict['SFI_ALD_Cement_Database'].columns)\n",
+    "display(cement_df.columns)\n",
     "\n",
     "bObj = bucket.Object('SFI_GeoAsset/SFI-Global-Steel-Database-July-2021.xlsx')\n",
     "steel_bytes = io.BytesIO(bObj.get()['Body'].read())\n",
     "timestamp = max(timestamp, bObj.last_modified.isoformat())\n",
     "\n",
-    "steel_dict = pd.read_excel(steel_bytes, sheet_name=None, dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
-    "del(steel_bytes)\n",
-    "\n",
-    "display(steel_dict['SFI_ALD_Steel_Database'].columns)"
+    "steel_df = pd.read_excel(steel_bytes, sheet_name='SFI_ALD_Steel_Database', dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
+    "display(steel_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce27598f-6454-47ee-bb95-9f3da558d476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel(steel_bytes, sheet_name='About', header=None)\n",
+    "steel_meta_content = {\n",
+    "    'title': df.iloc[0,0],\n",
+    "    'license': df.iloc[2,0],\n",
+    "    'description': df.iloc[4,0],\n",
+    "    'citation': df.iloc[6,0],\n",
+    "    'contact': df.iloc[8,0],\n",
+    "    'release_date': 'July 2021',\n",
+    "    # How should we describe our transformative step here?\n",
+    "}\n",
+    "df = df.iloc[:, [1, 2]].dropna(axis=0).T\n",
+    "df2 = pd.DataFrame(index=[0], columns=df.iloc[0])\n",
+    "df2.loc[0] = df.iloc[1].values\n",
+    "# df = df.dropna(axis=0).set_index(0).T\n",
+    "df = df2\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a5697f-3a6a-4462-afde-ff7630f3d0f3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "steel_meta_fields = df.to_dict('records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45bc20bd-744d-407f-9120-c47b4a805f92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "steel_meta_fields"
    ]
   },
   {
@@ -275,35 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59bd331e-0014-44c1-8d5a-5434140f0a4d",
-   "metadata": {},
-   "source": [
-    "### Create and store metadata for annual_gwh table (1/3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ab110c5-5f09-4e8b-adc8-08fe521392ea",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "custom_meta_fields = None\n",
-    "\n",
-    "custom_meta_content = {\n",
-    "    'title': 'SFI GeoAsset Steel and Concrete Plant Data',\n",
-    "    'description': 'desc',\n",
-    "    'version': 'July 2021',\n",
-    "    'release_date': '20210715'\n",
-    "    # How should we describe our transformative step here?\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc84f129-1901-4c67-b5e9-a996169a8495",
+   "id": "a7cfcd49-90cc-45c7-a4e0-8b81947d8d07",
    "metadata": {},
    "source": [
     "Construct the combined metadata by merging existing table metadata and custom metadata.\n",
@@ -318,7 +372,7 @@
    "outputs": [],
    "source": [
     "tablename = 'cement'\n",
-    "create_trino_pipeline (s3, schemaname, tablename, timestamp, cement_dict['SFI_ALD_Cement_Database'], custom_meta_fields, custom_meta_content)"
+    "create_trino_pipeline (s3, schemaname, tablename, timestamp, cement_df, cement_meta_fields, cement_meta_content)"
    ]
   },
   {
@@ -396,7 +450,7 @@
    "outputs": [],
    "source": [
     "tablename = 'steel'\n",
-    "create_trino_pipeline (s3, schemaname, tablename, timestamp, steel_dict['SFI_ALD_Steel_Database'], custom_meta_fields, custom_meta_content)"
+    "create_trino_pipeline (s3, schemaname, tablename, timestamp, steel_df, steel_meta_fields, steel_meta_content)"
    ]
   },
   {
@@ -464,234 +518,6 @@
    "outputs": [],
    "source": [
     "restored_meta_fields"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "84f7a9f6-6603-4a21-9edd-fc3fc19dcef2",
-   "metadata": {},
-   "source": [
-    "### Finally, write out plants with metadata\n",
-    "\n",
-    "Create the actual metadata for the source.  In this case, it is WRI_GPPD.\n",
-    "The quoted text comes from the README.txt file that comes with the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fb6a5ed-1ee1-46dd-b877-41dd1d139f9d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "custom_meta_content = {}\n",
-    "metadata_text = \"\"\"Title: Global Power Plant Database\n",
-    "Description: A comprehensive, global, open source database of power plants\n",
-    "Version: 1.3.0\n",
-    "Release Date: 2021-06-02\n",
-    "URI: http://datasets.wri.org/dataset/globalpowerplantdatabase\n",
-    "Copyright: Copyright 2018-2021 World Resources Institute and Data Contributors\n",
-    "License: Creative Commons Attribution 4.0 International -- CC BY 4.0\n",
-    "Contact: powerexplorer@wri.org\n",
-    "Citation: Global Energy Observatory, Google, KTH Royal Institute of Technology in Stockholm, Enipedia, World Resources Institute. 2019. Global Power Plant Database. Published on Resource Watch and Google Earth Engine. http://resourcewatch.org/ https://earthengine.google.com/  \"\"\"\n",
-    "\n",
-    "for line in metadata_text.split('\\n'):\n",
-    "    k, v = line.split(':', 1)\n",
-    "    k = snakify(k)\n",
-    "    custom_meta_content[k] = v\n",
-    "\n",
-    "custom_meta_content['abstract'] = \"\"\"An affordable, reliable, and environmentally sustainable power sector is central to modern society.\n",
-    "Governments, utilities, and companies make decisions that both affect and depend on the power sector.\n",
-    "For example, if governments apply a carbon price to electricity generation, it changes how plants run and which plants are built over time.\n",
-    "On the other hand, each new plant affects the electricity generation mix, the reliability of the system, and system emissions.\n",
-    "Plants also have significant impact on climate change, through carbon dioxide (CO2) emissions; on water stress, through water withdrawal and consumption; and on air quality, through sulfur oxides (SOx), nitrogen oxides (NOx), and particulate matter (PM) emissions.\n",
-    "\n",
-    "The Global Power Plant Database is an open-source open-access dataset of grid-scale (1 MW and greater) electricity generating facilities operating across the world.\n",
-    "\n",
-    "The Database currently contains nearly 35000 power plants in 167 countries, representing about 72% of the world's capacity.\n",
-    "Entries are at the facility level only, generally defined as a single transmission grid connection point.\n",
-    "Generation unit-level information is not currently available. \n",
-    "The methodology for the dataset creation is given in the World Resources Institute publication \"A Global Database of Power Plants\" [0].\n",
-    "Associated code for the creation of the dataset can be found on GitHub [1].\n",
-    "See also the technical note published in early 2020 on an improved methodology to estimate annual generation [2].\n",
-    "\n",
-    "To stay updated with news about the project and future database releases, please sign up for our newsletter for the release announcement [3].\n",
-    "\n",
-    "\n",
-    "[0] www.wri.org/publication/global-power-plant-database\n",
-    "[1] https://github.com/wri/global-power-plant-database\n",
-    "[2] https://www.wri.org/publication/estimating-power-plant-generation-global-power-plant-database\n",
-    "[3] https://goo.gl/ivTvkd\"\"\"\n",
-    "custom_meta_content['name'] = 'WRI_GPPD'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97a9d93a-71c6-43b0-b9bc-ff7505b070ee",
-   "metadata": {},
-   "source": [
-    "Create the metadata for all the fields in all the tables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c407133-8e2f-4a27-9f88-5ff9cf197e79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "field_text = \"\"\"`country` (text): 3 character country code corresponding to the ISO 3166-1 alpha-3 specification [https://www.iso.org/iso-3166-country-codes.html]\n",
-    "`country_long` (text): longer form of the country designation\n",
-    "`name` (text): name or title of the power plant, generally in Romanized form\n",
-    "`gppd_idnr` (text): 10 or 12 character identifier for the power plant\n",
-    "`capacity_mw` (number): electrical generating capacity in megawatts\n",
-    "`latitude` (number): geolocation in decimal degrees; WGS84 (EPSG:4326)\n",
-    "`longitude` (number): geolocation in decimal degrees; WGS84 (EPSG:4326)\n",
-    "`primary_fuel` (text): energy source used in primary electricity generation or export\n",
-    "`other_fuel1` (text): energy source used in electricity generation or export\n",
-    "`other_fuel2` (text): energy source used in electricity generation or export\n",
-    "`other_fuel3` (text): energy source used in electricity generation or export\n",
-    "`commissioning_year` (number): year of plant operation, weighted by unit-capacity when data is available\n",
-    "`owner` (text): majority shareholder of the power plant, generally in Romanized form\n",
-    "`source` (text): entity reporting the data; could be an organization, report, or document, generally in Romanized form\n",
-    "`url` (text): web document corresponding to the `source` field\n",
-    "`geolocation_source` (text): attribution for geolocation information\n",
-    "`wepp_id` (text): a reference to a unique plant identifier in the widely-used PLATTS-WEPP database.\n",
-    "`year_of_capacity_data` (number): year the capacity information was reported\n",
-    "`generation_data_source` (text): attribution for the reported generation information\"\"\"\n",
-    "\n",
-    "field_descs = [line.split(': ')[1] for line in field_text.split('\\n')]\n",
-    "field_keys = [line.split(': ')[0].split(' ')[0][1:-1] for line in field_text.split('\\n')]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4cbd3141-b0f0-4c04-b8f1-4dcbdbebd482",
-   "metadata": {},
-   "source": [
-    "Create custom meta data and key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dbbed61-7a9a-45c2-91ba-27d33ee677be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "custom_meta_fields = {}\n",
-    "for k, v in zip(field_keys, field_descs):\n",
-    "    custom_meta_fields[k] = { 'description': v }\n",
-    "\n",
-    "custom_meta_fields['capacity_mw']['dimension'] = 'MW'\n",
-    "custom_meta_fields['latitude']['dimension'] = 'degrees'\n",
-    "custom_meta_fields['longitude']['dimension'] = 'degrees'\n",
-    "custom_meta_fields['commissioning_year']['dimension'] = 'year'\n",
-    "custom_meta_fields['year_of_capacity_data']['dimension'] = 'year'\n",
-    "custom_meta_fields['year'] = { 'description': 'year of report', 'dimension': 'year'}\n",
-    "custom_meta_fields['gppd_idnr'] = { 'description': 'unique index into plants table', 'dimension': None}\n",
-    "custom_meta_fields['generation_gwh'] = { 'description': 'electricity generation in gigawatt-hours reported for the year', 'dimension': 'GWh'}\n",
-    "custom_meta_fields['estimated_generation_gwh'] = { 'description': 'estimated electricity generation in gigawatt-hours reported for the year', 'dimension': 'GWh'}\n",
-    "custom_meta_fields['estimated_generation_note'] = { 'description': 'label of the model/method used to estimate generation for the year', 'dimension': None }\n",
-    "custom_meta_key_fields = 'metafields'\n",
-    "\n",
-    "custom_meta_content = {\n",
-    "    'title': 'Global Power Plant Database',\n",
-    "    'description': 'A comprehensive, global, open source database of power plants',\n",
-    "    'version': '1.3.0',\n",
-    "    'release_date': '20210602'\n",
-    "}\n",
-    "custom_meta_key = 'metaset'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "224b19d3-f756-4081-bf99-324e401f0d80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tablename = 'plants'\n",
-    "create_trino_pipeline (s3, schemaname, tablename, timestamp, wri_plants, custom_meta_fields, custom_meta_content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1ba7b596-8400-4df8-bb05-9c1a313dbb88",
-   "metadata": {},
-   "source": [
-    "Restore data and metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7643e7b0-0b2f-4187-a3cf-c3fa715715e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read the Parquet file into an Arrow table\n",
-    "obj = s3.get_object(\n",
-    "    Bucket=os.environ['S3_DEV_BUCKET'], \n",
-    "    Key='trino/{sname}/{tname}/{uuid}/{timestamp}/{tname}.parquet'.format(sname=schemaname, tname=tablename, uuid=ingest_uuid, timestamp=timestamp)\n",
-    ")\n",
-    "restored_table = pq.read_table(io.BytesIO(obj['Body'].read()))\n",
-    "# Call the table’s to_pandas conversion method to restore the dataframe\n",
-    "# This operation uses the Pandas metadata to reconstruct the dataFrame under the hood\n",
-    "restored_df = restored_table.to_pandas()\n",
-    "# The custom metadata is accessible via the Arrow table’s metadata object\n",
-    "# Use the custom metadata key used earlier (taking care to once again encode the key as bytes)\n",
-    "restored_meta_json = restored_table.schema.metadata[custom_meta_key.encode()]\n",
-    "# Deserialize the json string to get back metadata\n",
-    "restored_meta = json.loads(restored_meta_json)\n",
-    "# Use the custom metadata fields key used earlier (taking care to once again encode the key as bytes)\n",
-    "restored_meta_json_fields = restored_table.schema.metadata[custom_meta_key_fields.encode()]\n",
-    "# Deserialize the json string to get back metadata\n",
-    "restored_meta_fields = json.loads(restored_meta_json_fields)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5b4046b-bc58-4363-963c-b61b0f6015cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "restored_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f423647-23b0-44b4-860a-892878519261",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "restored_meta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05756f41-374f-4010-8924-1d3293c30f5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "restored_meta_fields"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96b39786-15d8-430f-9111-b05fc08e73f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(wri_plants)"
    ]
   },
   {
