Make YEAR a timestamp.
Also continue to touch up source code to match the latest ingestion idioms.

--- a/notebooks/SFI-GeoAsset-ingest.ipynb
+++ b/notebooks/SFI-GeoAsset-ingest.ipynb
@@ -114,11 +114,12 @@
     "    http_scheme='https',\n",
     "    auth=trino.auth.JWTAuthentication(os.environ['TRINO_PASSWD']),\n",
     "    verify=True,\n",
+    "    catalog='osc_datacommons_dev'\n",
     ")\n",
     "cur = conn.cursor()\n",
     "\n",
     "# Show available schemas to ensure trino connection is set correctly\n",
-    "cur.execute('show schemas in osc_datacommons_dev')\n",
+    "cur.execute('show schemas')\n",
     "cur.fetchall()"
    ]
   },
@@ -135,7 +136,7 @@
     "custom_meta_key = 'metaset'\n",
     "\n",
     "schemaname = 'sfi_geoasset'\n",
-    "cur.execute('create schema if not exists osc_datacommons_dev.' + schemaname)\n",
+    "cur.execute(f\"create schema if not exists {schemaname}\")\n",
     "cur.fetchall()"
    ]
   },
@@ -173,27 +174,27 @@
     "        }\n",
     "        table = table.replace_schema_metadata(combined_meta)\n",
     "    # Third, convert table to parquet format (which cannot be written directly to s3)\n",
-    "    pq.write_table(table, '/tmp/{sname}.{tname}.{uuid}.{timestamp}.parquet'.format(sname=schemaname, tname=tablename, uuid=ingest_uuid, timestamp=timestamp))\n",
+    "    pq.write_table(table, f\"/tmp/{schemaname}.{tablename}.{ingest_uuid}.{timestamp}.parquet\")\n",
     "    # df.to_parquet('/tmp/{sname}.{tname}.{uuid}.parquet'.format(sname=schemaname, tname=tablename, uuid=ingest_uuid, index=False))\n",
     "    # Fourth, put the parquet-ified data into our S3 bucket for trino.  We cannot compute parquet format directly to S3 but we can copy it once computed\n",
     "    s3.upload_file(\n",
     "        Bucket=os.environ['S3_DEV_BUCKET'],\n",
-    "        Key='trino/{sname}/{tname}/{uuid}/{timestamp}/{tname}.parquet'.format(sname=schemaname, tname=tablename, uuid=ingest_uuid, timestamp=timestamp),\n",
-    "        Filename='/tmp/{sname}.{tname}.{uuid}.{timestamp}.parquet'.format(sname=schemaname, tname=tablename, uuid=ingest_uuid, timestamp=timestamp)\n",
+    "        Key=f\"trino/{schemaname}/{tablename}/{ingest_uuid}/{timestamp}/data.parquet\",\n",
+    "        Filename=f\"/tmp/{schemaname}.{tablename}.{ingest_uuid}.{timestamp}.parquet\"\n",
     "    )\n",
     "    # Finally, create the trino table backed by our parquet files enhanced by our metadata\n",
-    "    cur.execute('.'.join(['drop table if exists osc_datacommons_dev', schemaname, tablename]))\n",
-    "    print('dropping table: ' + tablename)\n",
+    "    cur.execute(f\"drop table if exists {schemaname}.{tablename}\")\n",
+    "    print(f\"dropping table: {tablename}\")\n",
     "    cur.fetchall()\n",
     "    \n",
-    "    schema = create_table_schema_pairs(df)\n",
+    "    columnschema = create_table_schema_pairs(df)\n",
     "\n",
-    "    tabledef = \"\"\"create table if not exists osc_datacommons_dev.{sname}.{tname}(\n",
-    "{schema}\n",
+    "    tabledef = f\"\"\"create table if not exists {schemaname}.{tablename}(\n",
+    "{columnschema}\n",
     ") with (\n",
     "    format = 'parquet',\n",
-    "    external_location = 's3a://{bucket}/trino/{sname}/{tname}/{uuid}/{timestamp}'\n",
-    ")\"\"\".format(schema=schema,bucket=os.environ['S3_DEV_BUCKET'],sname=schemaname,tname=tablename,uuid=ingest_uuid,timestamp=timestamp)\n",
+    "    external_location = 's3a://{os.environ['S3_DEV_BUCKET']}/trino/{schemaname}/{tablename}/{ingest_uuid}/{timestamp}'\n",
+    ")\"\"\"\n",
     "    print(tabledef)\n",
     "\n",
     "    # tables created externally may not show up immediately in cloud-beaver\n",
@@ -225,9 +226,18 @@
     "cement_bytes = io.BytesIO(bObj.get()['Body'].read())\n",
     "timestamp = bObj.last_modified.isoformat()\n",
     "\n",
-    "# Because NaN cannot be converted to int type, we cannot use int as a datatype for years that are NaN\n",
-    "\n",
-    "cement_df = pd.read_excel(cement_bytes, sheet_name='SFI_ALD_Cement_Database', dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')"
+    "cement_df = pd.read_excel(cement_bytes, sheet_name='SFI_ALD_Cement_Database', dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
+    "cement_df.year = pd.to_datetime(cement_df.year, format='%Y', utc=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c55cd1d5-22d2-46f0-8194-b3fdbbfe3393",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cement_df.info(verbose=True)"
    ]
   },
   {
@@ -291,7 +301,8 @@
     "timestamp = max(timestamp, bObj.last_modified.isoformat())\n",
     "\n",
     "steel_df = pd.read_excel(steel_bytes, sheet_name='SFI_ALD_Steel_Database', dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
-    "display(steel_df.columns)"
+    "steel_df.year = pd.to_datetime(steel_df.year, format='%Y', utc=True)\n",
+    "steel_df.info(verbose=True)"
    ]
   },
   {
@@ -392,8 +403,8 @@
    "source": [
     "# Read the Parquet file into an Arrow table\n",
     "obj = s3.get_object(\n",
-    "    Bucket=os.environ['S3_DEV_BUCKET'], \n",
-    "    Key='trino/{sname}/{tname}/{uuid}/{timestamp}/{tname}.parquet'.format(sname=schemaname, tname=tablename, uuid=ingest_uuid, timestamp=timestamp)\n",
+    "    Bucket=os.environ['S3_DEV_BUCKET'],\n",
+    "    Key=f\"trino/{schemaname}/{tablename}/{ingest_uuid}/{timestamp}/data.parquet\"\n",
     ")\n",
     "restored_table = pq.read_table(io.BytesIO(obj['Body'].read()))\n",
     "# Call the table’s to_pandas conversion method to restore the dataframe\n",
@@ -471,7 +482,7 @@
     "# Read the Parquet file into an Arrow table\n",
     "obj = s3.get_object(\n",
     "    Bucket=os.environ['S3_DEV_BUCKET'], \n",
-    "    Key='trino/{sname}/{tname}/{uuid}/{timestamp}/{tname}.parquet'.format(sname=schemaname, tname=tablename, uuid=ingest_uuid, timestamp=timestamp)\n",
+    "    Key=f\"trino/{schemaname}/{tablename}/{ingest_uuid}/{timestamp}/data.parquet\"\n",
     ")\n",
     "restored_table = pq.read_table(io.BytesIO(obj['Body'].read()))\n",
     "# Call the table’s to_pandas conversion method to restore the dataframe\n",
