Move YEAR column to last column in data frame
In case that's actually a good thing for partitioning.

--- a/notebooks/SFI-GeoAsset-ingest.ipynb
+++ b/notebooks/SFI-GeoAsset-ingest.ipynb
@@ -227,6 +227,8 @@
     "                          dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
     "cement_df.year = pd.to_datetime(cement_df.year, format='%Y', utc=False)\n",
     "cement_df.insert(cement_df.columns.get_loc(\"capacity\")+1, \"capacity_units\", \"megaCement_ton\")\n",
+    "year_index = suppliers_df.columns.get_loc('year')\n",
+    "\n",
     "cement_df = cement_df.convert_dtypes()"
    ]
   },
