Move year to end of table for partition's sake
If that's a thing.  Still don't know whether tables benefit from specific column orders for partitioning.

--- a/notebooks/SFI-GeoAsset-ingest.ipynb
+++ b/notebooks/SFI-GeoAsset-ingest.ipynb
@@ -227,8 +227,10 @@
     "                          dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
     "cement_df.year = pd.to_datetime(cement_df.year, format='%Y', utc=False)\n",
     "cement_df.insert(cement_df.columns.get_loc(\"capacity\")+1, \"capacity_units\", \"megaCement_ton\")\n",
-    "year_index = suppliers_df.columns.get_loc('year')\n",
-    "\n",
+    "year_index = cement_df.columns.get_loc('year')\n",
+    "cement_df = cement_df[cement_df.columns[:year_index].to_list()\n",
+    "                + cement_df.columns[year_index+1:].to_list()\n",
+    "                + [cement_df.columns[year_index]]]\n",
     "cement_df = cement_df.convert_dtypes()"
    ]
   },
@@ -263,7 +265,6 @@
       "    capacity double,\n",
       "    capacity_units varchar,\n",
       "    capacity_source varchar,\n",
-      "    year timestamp(6),\n",
       "    owner_permid bigint,\n",
       "    owner_name varchar,\n",
       "    owner_source varchar,\n",
@@ -280,7 +281,8 @@
       "    parent_lei_2 varchar,\n",
       "    parent_holding_status_2 varchar,\n",
       "    parent_ticker_2 varchar,\n",
-      "    parent_exchange_2 varchar\n",
+      "    parent_exchange_2 varchar,\n",
+      "    year timestamp(6)\n",
       ") with (\n",
       "partitioning = array['year'],\n",
       "format = 'ORC'\n",
@@ -291,7 +293,7 @@
       "inserting 3117 records\n",
       "  ('GACTAFG0001', 'Pol-e Khomri', 'Baghlan', 'Afghanistan', 'AFG', 4, 'Asia', 'Southern Asia', 35.9658, 68.686338, 'Exact', 'Operating', 'Integrated', 'Wet', 0.36, 'megaCement_ton', 'https\\://prd-wret.s3-us-west-2.amazonaws.com/assets/palladium/production/atoms/files/myb3-2015-af.pdf', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
       "  ('GACTAFG0002', 'Injil', 'Herat', 'Afghanistan', 'AFG', 4, 'Asia', 'Southern Asia', 34.322144, 61.953503, 'Exact', 'Under Construction', NULL, NULL, NULL, 'megaCement_ton', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
-      "  ('GACTAGO0001', 'Luanda', 'Luanda', 'Angola', 'AGO', 24, 'Africa', 'Sub-Saharan Africa', -8.766173, 13.316051, 'Exact', 'Operating', 'Integrated', NULL, 1.2, 'megaCement_ton', 'https\\://prd-wret.s3-us-west-2.amazonaws.com/assets/palladium/production/atoms/files/myb3-2016-ang.pdf', NULL, 4296811479, 'Nova Cimangola', 'http\\://www.cimangola.com/?page_id=1168&lang=en', 4296811479, 'Nova Cimangola', NULL, NULL, 'Private', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
+      "  ('GACTAGO0001', 'Luanda', 'Luanda', 'Angola', 'AGO', 24, 'Africa', 'Sub-Saharan Africa', -8.766173, 13.316051, 'Exact', 'Operating', 'Integrated', NULL, 1.2, 'megaCement_ton', 'https\\://prd-wret.s3-us-west-2.amazonaws.com/assets/palladium/production/atoms/files/myb3-2016-ang.pdf', 4296811479, 'Nova Cimangola', 'http\\://www.cimangola.com/?page_id=1168&lang=en', 4296811479, 'Nova Cimangola', NULL, NULL, 'Private', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
       "  ...\n",
       "  ('GACTZWE0006', 'Redcliff', 'Midlands Province', 'Zimbabwe', 'ZWE', 716, 'Africa', 'Sub-Saharan Africa', -18.99883, 29.767309, 'Exact', 'Operating', 'Grinding', NULL, NULL, 'megaCement_ton', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
       "batch insert result: [(3117,)]\n"
@@ -334,24 +336,24 @@
       " 14  capacity                 1674 non-null   Float64       \n",
       " 15  capacity_units           3117 non-null   string        \n",
       " 16  capacity_source          1674 non-null   string        \n",
-      " 17  year                     1030 non-null   datetime64[ns]\n",
-      " 18  owner_permid             1728 non-null   Int64         \n",
-      " 19  owner_name               2176 non-null   string        \n",
-      " 20  owner_source             2176 non-null   string        \n",
-      " 21  parent_permid            2104 non-null   Int64         \n",
-      " 22  parent_name              2176 non-null   string        \n",
-      " 23  ownership_stake          62 non-null     Float64       \n",
-      " 24  parent_lei               1589 non-null   string        \n",
-      " 25  parent_holding_status    2176 non-null   string        \n",
-      " 26  parent_ticker            1394 non-null   string        \n",
-      " 27  parent_exchange          1394 non-null   string        \n",
-      " 28  parent_permid_2          60 non-null     Int64         \n",
-      " 29  parent_name_2            60 non-null     string        \n",
-      " 30  ownership_stake_2        60 non-null     Float64       \n",
-      " 31  parent_lei_2             60 non-null     string        \n",
-      " 32  parent_holding_status_2  60 non-null     string        \n",
-      " 33  parent_ticker_2          60 non-null     string        \n",
-      " 34  parent_exchange_2        60 non-null     string        \n",
+      " 17  owner_permid             1728 non-null   Int64         \n",
+      " 18  owner_name               2176 non-null   string        \n",
+      " 19  owner_source             2176 non-null   string        \n",
+      " 20  parent_permid            2104 non-null   Int64         \n",
+      " 21  parent_name              2176 non-null   string        \n",
+      " 22  ownership_stake          62 non-null     Float64       \n",
+      " 23  parent_lei               1589 non-null   string        \n",
+      " 24  parent_holding_status    2176 non-null   string        \n",
+      " 25  parent_ticker            1394 non-null   string        \n",
+      " 26  parent_exchange          1394 non-null   string        \n",
+      " 27  parent_permid_2          60 non-null     Int64         \n",
+      " 28  parent_name_2            60 non-null     string        \n",
+      " 29  ownership_stake_2        60 non-null     Float64       \n",
+      " 30  parent_lei_2             60 non-null     string        \n",
+      " 31  parent_holding_status_2  60 non-null     string        \n",
+      " 32  parent_ticker_2          60 non-null     string        \n",
+      " 33  parent_exchange_2        60 non-null     string        \n",
+      " 34  year                     1030 non-null   datetime64[ns]\n",
       "dtypes: Float64(5), Int64(4), datetime64[ns](1), string(25)\n",
       "memory usage: 879.8 KB\n"
      ]
@@ -604,11 +606,12 @@
        "Index(['uid', 'city', 'state', 'country', 'iso3', 'country_code', 'region',\n",
        "       'sub_region', 'latitude', 'longitude', 'accuracy', 'status',\n",
        "       'plant_type', 'production_type', 'capacity', 'capacity_units',\n",
-       "       'capacity_source', 'year', 'owner_permid', 'owner_name', 'owner_source',\n",
+       "       'capacity_source', 'owner_permid', 'owner_name', 'owner_source',\n",
        "       'parent_permid', 'parent_name', 'ownership_stake', 'parent_lei',\n",
        "       'parent_holding_status', 'parent_ticker', 'parent_exchange',\n",
        "       'parent_permid_2', 'parent_name_2', 'ownership_stake_2', 'parent_lei_2',\n",
-       "       'parent_holding_status_2', 'parent_ticker_2', 'parent_exchange_2'],\n",
+       "       'parent_holding_status_2', 'parent_ticker_2', 'parent_exchange_2',\n",
+       "       'year'],\n",
        "      dtype='object')"
       ]
      },
@@ -642,24 +645,24 @@
       " 15  capacity                 386 non-null    Float64       \n",
       " 16  capacity_units           1598 non-null   string        \n",
       " 17  capacity_source          386 non-null    string        \n",
-      " 18  year                     288 non-null    datetime64[ns]\n",
-      " 19  owner_permid             1168 non-null   Int64         \n",
-      " 20  owner_name               1286 non-null   string        \n",
-      " 21  owner_source             1286 non-null   string        \n",
-      " 22  parent_permid            1228 non-null   Int64         \n",
-      " 23  parent_name              1286 non-null   string        \n",
-      " 24  ownership_stake          16 non-null     Float64       \n",
-      " 25  parent_lei               859 non-null    string        \n",
-      " 26  parent_holding_status    1227 non-null   string        \n",
-      " 27  parent_ticker            723 non-null    string        \n",
-      " 28  parent_exchange          695 non-null    string        \n",
-      " 29  parent_permid_2          15 non-null     Int64         \n",
-      " 30  parent_name_2            15 non-null     string        \n",
-      " 31  ownership_stake_2        14 non-null     Float64       \n",
-      " 32  parent_lei_2             8 non-null      string        \n",
-      " 33  parent_holding_status_2  15 non-null     string        \n",
-      " 34  parent_ticker_2          9 non-null      string        \n",
-      " 35  parent_exchange_2        8 non-null      string        \n",
+      " 18  owner_permid             1168 non-null   Int64         \n",
+      " 19  owner_name               1286 non-null   string        \n",
+      " 20  owner_source             1286 non-null   string        \n",
+      " 21  parent_permid            1228 non-null   Int64         \n",
+      " 22  parent_name              1286 non-null   string        \n",
+      " 23  ownership_stake          16 non-null     Float64       \n",
+      " 24  parent_lei               859 non-null    string        \n",
+      " 25  parent_holding_status    1227 non-null   string        \n",
+      " 26  parent_ticker            723 non-null    string        \n",
+      " 27  parent_exchange          695 non-null    string        \n",
+      " 28  parent_permid_2          15 non-null     Int64         \n",
+      " 29  parent_name_2            15 non-null     string        \n",
+      " 30  ownership_stake_2        14 non-null     Float64       \n",
+      " 31  parent_lei_2             8 non-null      string        \n",
+      " 32  parent_holding_status_2  15 non-null     string        \n",
+      " 33  parent_ticker_2          9 non-null      string        \n",
+      " 34  parent_exchange_2        8 non-null      string        \n",
+      " 35  year                     288 non-null    datetime64[ns]\n",
       "dtypes: Float64(5), Int64(4), datetime64[ns](1), string(26)\n",
       "memory usage: 463.6 KB\n"
      ]
@@ -676,6 +679,10 @@
     "                         dtype={'latitude':'float64', 'longitude':'float64'}, engine='openpyxl')\n",
     "steel_df.year = pd.to_datetime(steel_df.year, format='%Y', utc=False)\n",
     "steel_df.insert(steel_df.columns.get_loc(\"capacity\")+1, \"capacity_units\", \"megaFe_ton\")\n",
+    "year_index = steel_df.columns.get_loc('year')\n",
+    "steel_df = steel_df[steel_df.columns[:year_index].to_list()\n",
+    "               + steel_df.columns[year_index+1:].to_list()\n",
+    "               + [steel_df.columns[year_index]]]\n",
     "steel_df = steel_df.convert_dtypes()\n",
     "steel_df.info(verbose=True)"
    ]
@@ -710,7 +717,6 @@
       "    capacity double,\n",
       "    capacity_units varchar,\n",
       "    capacity_source varchar,\n",
-      "    year timestamp(6),\n",
       "    owner_permid bigint,\n",
       "    owner_name varchar,\n",
       "    owner_source varchar,\n",
@@ -727,7 +733,8 @@
       "    parent_lei_2 varchar,\n",
       "    parent_holding_status_2 varchar,\n",
       "    parent_ticker_2 varchar,\n",
-      "    parent_exchange_2 varchar\n",
+      "    parent_exchange_2 varchar,\n",
+      "    year timestamp(6)\n",
       ") with (\n",
       "partitioning = array['year'],\n",
       "format = 'ORC'\n",
@@ -736,9 +743,9 @@
       "[(True,)]\n",
       "constructed fully qualified table name as: \"sandbox.sfi_steel\"\n",
       "inserting 1598 records\n",
-      "  ('GASTAGO0001', 'Dande', 'Bengo Province', 'Angola', 'AGO', 24, 'Africa', 'Sub-Saharan Africa', -8.5824, 13.405271, 'Exact', 'Operating', 'Mini-Mill', 'EAF', 'Crude Steel', 0.5, 'megaFe_ton', 'http\\://www.adasteel.com/ada', TIMESTAMP '2015-01-01 00:00:00', NULL, 'Aceria de Angola', 'http\\://www.adasteel.com/', NULL, 'Aceria de Angola', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
-      "  ('GASTALB0001', 'Rrethi i Elbasanit', 'Qarku i Elbasanit', 'Albania', 'ALB', 8, 'Europe', 'Southern Europe', 41.094611, 20.026117, 'Exact', 'Operating', 'Mini-Mill', 'EAF', 'Crude Steel', 0.7, 'megaFe_ton', 'https\\://www.kurum.al/per-ne/', NULL, 5037939021, 'Kurum International ShA', 'https\\://www.kurum.al/', 5037939021, 'Kurum International ShA', NULL, NULL, 'Private', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
-      "  ('GASTARE0001', 'Abu Dhabi', NULL, 'United Arab Emirates', 'ARE', 784, 'Asia', 'Western Asia', 24.320682, 54.480176, 'Exact', 'Operating', NULL, NULL, NULL, NULL, 'megaFe_ton', NULL, NULL, 5036868025, 'Al Ghurair Iron & Steel L L C', 'http\\://agis.ae/', 5036868025, 'Al Ghurair Iron & Steel L L C', NULL, '2549007GWVX54PSL3121', 'Private', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
+      "  ('GASTAGO0001', 'Dande', 'Bengo Province', 'Angola', 'AGO', 24, 'Africa', 'Sub-Saharan Africa', -8.5824, 13.405271, 'Exact', 'Operating', 'Mini-Mill', 'EAF', 'Crude Steel', 0.5, 'megaFe_ton', 'http\\://www.adasteel.com/ada', NULL, 'Aceria de Angola', 'http\\://www.adasteel.com/', NULL, 'Aceria de Angola', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, TIMESTAMP '2015-01-01 00:00:00')\n",
+      "  ('GASTALB0001', 'Rrethi i Elbasanit', 'Qarku i Elbasanit', 'Albania', 'ALB', 8, 'Europe', 'Southern Europe', 41.094611, 20.026117, 'Exact', 'Operating', 'Mini-Mill', 'EAF', 'Crude Steel', 0.7, 'megaFe_ton', 'https\\://www.kurum.al/per-ne/', 5037939021, 'Kurum International ShA', 'https\\://www.kurum.al/', 5037939021, 'Kurum International ShA', NULL, NULL, 'Private', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
+      "  ('GASTARE0001', 'Abu Dhabi', NULL, 'United Arab Emirates', 'ARE', 784, 'Asia', 'Western Asia', 24.320682, 54.480176, 'Exact', 'Operating', NULL, NULL, NULL, NULL, 'megaFe_ton', NULL, 5036868025, 'Al Ghurair Iron & Steel L L C', 'http\\://agis.ae/', 5036868025, 'Al Ghurair Iron & Steel L L C', NULL, '2549007GWVX54PSL3121', 'Private', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
       "  ...\n",
       "  ('GASTZWE0001', 'Kwekwe', 'Midlands Province', 'Zimbabwe', 'ZWE', 716, 'Africa', 'Sub-Saharan Africa', -18.915274, 29.82408, 'Exact', 'Operating', NULL, NULL, NULL, NULL, 'megaFe_ton', NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL, NULL)\n",
       "batch insert result: [(1598,)]\n"
